<resources>
    <string name="app_name">Pinetree</string>

    <string name="parseAppId">pinetree</string>
    <string name="parseClientId">y2DJIxBihBof5wWVX3gP</string>
    <string name="parseUrl">http://pintree.us-east-1.elasticbeanstalk.com/parse/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sign_in">Sign In</string>

    <string name="sign_up">Sign Up</string>
    <string name="my_account">My Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="try_again">Try Again</string>

    <string name="create_account">New Account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm Password</string>


    <string name="zero">0</string>
    <string name="post_placeholder">What\'s on your mind?</string>

    <string name="plant_tree">Plant Tree</string>
</resources>
