<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="35dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.3"
            android:src="@drawable/logo_transparent"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="16dp"/>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/my_account"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorGrey"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGreyDark" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorGrey"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGreyDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorGreyDark" />

                <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/colorWhite"
            android:padding="18dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorBlack" />

    </LinearLayout>


</ScrollView>