<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:focusableInTouchMode="false"
    android:focusable="true"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="50dp"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorGrey"
            android:contentDescription="@string/app_name"
            android:src="@drawable/photo"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:inputType="textMultiLine"
            android:hint="@string/post_placeholder"
            android:padding="5dp"
            android:textSize="14sp"
            android:gravity="top|start"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="76dp"
            android:background="@color/colorGrey"/>

    </LinearLayout>

    <TextView
        android:id="@+id/disconnectBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="24sp"
        android:text="@string/plant_tree"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_margin="5dp"/>

</RelativeLayout>